dist_man1_MANS=

if BUILD_BITD
  dist_man1_MANS+=bitd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bit-qt.1
endif

if BUILD_BIT_CLI
  dist_man1_MANS+=bit-cli.1
endif

if BUILD_BIT_TX
  dist_man1_MANS+=bit-tx.1
endif

if BUILD_BIT_UTIL
  dist_man1_MANS+=bit-util.1
endif

if ENABLE_WALLET
if BUILD_BIT_WALLET
  dist_man1_MANS+=bit-wallet.1
endif
endif
